# ModelLink

./: .gitignore  README.md  proxy.py
.github/workflows/: build-windows.yml  ci.yml
claude-model-proxy/: .gitignore  Cargo.toml  README.md
docs/: acceptance-2.0.md  design-proposal-v3.html  design-proposal.html  design.md  gui-rebuild-tauri.md
gui-tauri/: .gitignore  RELEASE_NOTES.md  SIGNING.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
gui-tauri/regression/: drive.sh  run.sh  upstream.py
gui-tauri/scripts/: build-mac.sh  gen-latest-json.sh  release-mac.sh  signing.local.env.example
gui-tauri/src/: App.tsx  index.css  main.tsx
gui-tauri/src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
gui-tauri/src-tauri/capabilities/: default.json
gui-tauri/src-tauri/dmg/: background.src.html
gui-tauri/src-tauri/icons/: icon.icns
gui-tauri/src-tauri/src/: commands.rs  config.rs  gateway.rs  lib.rs  main.rs  proxy.rs
gui-tauri/src/assets/providers/: README.md
gui-tauri/src/components/: ApplyStatus.tsx  LinkBoard.tsx  PresetGrid.tsx  ProviderAvatar.tsx  ProviderEditor.tsx  RecentRequests.tsx  Sidebar.tsx  UpdateModal.tsx  port.ts
gui-tauri/src/components/pages/: LogsPage.tsx  OverviewPage.tsx  ProvidersPage.tsx  SettingsPage.tsx
gui-tauri/src/components/ui/: sonner.tsx
gui-tauri/src/lib/: constants.ts  devPreview.ts  ipc.ts  presets.ts  queryClient.ts  store.tsx  theme.tsx  updaterContext.ts  useUpdater.ts  useWatermark.ts
src/: main.rs  ui.html
