[package]
name = "claude-model-proxy"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
reqwest = { version = "0.12", features = ["stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tao = "0.32"
libc = "0.2"
tray-icon = "0.19"
muda = "0.15"
wry = "0.48"

[profile.release]
opt-level = "z"
lto = true
strip = true
