[package]
name = "modellink"
version = "2.0.0"
description = "ModelLink — 把国产大模型接入 Claude Desktop"
authors = ["Winhao学AI"]
edition = "2021"

[lib]
# `_lib` 后缀避免与 bin 同名冲突（Windows 上的已知问题）。
name = "modellink_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
# GUI 自身的应用内自动更新（GitHub releases latest.json + minisign 验签）
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 代理核心（自 v1 claude-model-proxy 平移，行为逐字节等价）
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
reqwest = { version = "0.12", features = ["stream"] }

# macOS：请求日志时间戳取本地时区偏移（平移 v1 chrono_now）
[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

# 桌面应用优先优化体积而非极致性能
[profile.release]
codegen-units = 1   # 更好的优化（牺牲编译速度）
lto = "thin"        # 链接时优化
opt-level = "s"     # 优化体积
panic = "unwind"
strip = "symbols"   # 去符号，减小体积
